añadidas las listas

--- a/info.html
+++ b/info.html
@@ -101,7 +101,7 @@
         </div>
 
         <div class="info">
-            <h3 class="info__presentacion">
+            <h3 class="info__encabezado--listas">
                 Algunas cosas que hemos aprendido:
             </h3>
         </div>
@@ -171,23 +171,31 @@
             </div>
         </div>
 
-        <div class="daily">
-            <dl>
-                <dt>Daly Meeting</dt>
-                <dd class="sublist">Ponemos en comun con el mentor lo que hicimos el día anterior y lo que queremos hacer el día de hoy.</dd>
-                <dt>Timework</dt>
-                <dd class="sublist">Trabajamos en el proyecto.</dd>
-                <dt>Workshop</dt>
-                <dd class="sublist">El mentor nos da una clase teórica.</dd>
-                <dt>Brake</dt>
-                <dd class="sublist">Paramos 30m para almorzar y estirar las piernas.</dd>
-                <dt>Timework Again</dt>
-                <dd class="sublist">Trabajamos de nuevo en el proyecto.</dd>
-                <dt>Launch Brake</dt>
-                <dd class="sublist">Paramos 1h para comer.</dd>
-                <dt>Timework Once Again</dt>
-                <dd class="sublist">Continuamos trabajando en el proyecto hasta la hora de irnos.</dd>
-            </dl>
+        <div class="info">
+            <h3 class="info__encabezado--listas">
+                Nuestro día a día:
+            </h3>
+        </div>
+
+        <div class="flex__list--daily">
+            <div class="daily zoom shadow">
+                <dl>
+                    <dt>09:00-09:20 / Daly Meeting</dt>
+                    <dd class="sublist">Ponemos en comun con el mentor lo que hicimos el día anterior y lo que queremos hacer el día de hoy.</dd>
+                    <dt>09:20-10:00 / Timework</dt>
+                    <dd class="sublist">Trabajamos en el proyecto.</dd>
+                    <dt>10:00-11:00 / Workshop</dt>
+                    <dd class="sublist">El mentor nos da una clase teórica.</dd>
+                    <dt>11:00-11:30 / Brake</dt>
+                    <dd class="sublist">Paramos 30m para almorzar y estirar las piernas.</dd>
+                    <dt>11:30-14:00 / Timework Again</dt>
+                    <dd class="sublist">Trabajamos de nuevo en el proyecto.</dd>
+                    <dt>14:00-15:00 / Launch Brake</dt>
+                    <dd class="sublist">Paramos 1h para comer.</dd>
+                    <dt>15:00-17:30 / Timework Once Again</dt>
+                    <dd class="sublist">Continuamos trabajando en el proyecto hasta la hora de irnos.</dd>
+                </dl>
+            </div>
         </div>
 
     </main>
