Formulario hecho-sin estilo

--- a/conocenos.html
+++ b/conocenos.html
@@ -18,7 +18,7 @@
 
         <div class="navegacion">
             <nav>
-                <button class="navegacion__button zoom" onclick="location.href='home.html'">Home</button>
+                <button class="navegacion__button zoom" onclick="location.href='index.html'">Home</button>
                 <button class="navegacion__button zoom" onclick="location.href='conocenos.html'">Conócenos</button>
                 <button class="navegacion__button zoom" onclick="location.href='info.html'">Información</button>
                 <button class="navegacion__button zoom" onclick="location.href='contacto.html'">Contacto</button>
