--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <div class="navegacion">
             <nav>
-                <button class="navegacion__button zoom" onclick="location.href='home.html'">Home</button>
+                <button class="navegacion__button zoom" onclick="location.href='index.html'">Home</button>
                 <button class="navegacion__button zoom" onclick="location.href='conocenos.html'">Conócenos</button>
                 <button class="navegacion__button zoom" onclick="location.href='info.html'">Información</button>
                 <button class="navegacion__button zoom" onclick="location.href='contacto.html'">Contacto</button>
@@ -56,7 +56,7 @@
                 <div class="linea__puntos"></div>
 
                 <div class="tarjeta__button">
-                    <button class="zoom">Inscribirme</button>
+                    <button class="zoom" onclick="location.href='form.html'">Inscribirme</button>
                 </div>
             </div>
 
@@ -82,7 +82,7 @@
                 <div class="linea__puntos"></div>
 
                 <div class="tarjeta__button">
-                    <button class="zoom">Inscribirme</button>
+                    <button class="zoom" onclick="location.href='form.html'">Inscribirme</button>
                 </div>
             </div>
 
@@ -108,7 +108,7 @@
                 <div class="linea__puntos"></div>
 
                 <div class="tarjeta__button">
-                    <button class="zoom">Inscribirme</button>
+                    <button class="zoom" onclick="location.href='form.html'">Inscribirme</button>
                 </div>
             </div>
         </div>
