--- a/form.html
+++ b/form.html
@@ -31,7 +31,7 @@
     <main class="width_main">
 
         <form class="form__flex">
-            <section class="section__personal">
+            <section class="section__personal zoom shadow">
                 <div>
                     <h3>Información personal</h3>
                 </div>
@@ -63,10 +63,11 @@
                 </div>
             </section>
 
-            <section class="section__curso">
+            <section class="section__curso zoom shadow">
                 <div>
-                    <h3>Información sobre el curso</h3>
+                    <h3 class="section__curso--titulo">Información sobre el curso</h3>
                 </div>
+
 
                 <div>
                     <p>Selecciona que tipo de Bootcamp te interesa<br/></p>
@@ -108,17 +109,20 @@
                 </div>
             </section>
 
-            <section class="section__coment">
+            <section class="section__coment zoom shadow">
                 <div>
                     <h3>Comentarios</h3>
                 </div>
 
                 <div>
-                    <!-- <label for="comentarios">Deja tus comentarios</label> -->
                     <textarea name="comentarios">Puedes dejarnos tus dudas y comentarios</textarea>
                 </div>
 
             </section>
+
+            <div>
+                <button class="enviar__button zoom">Enviar</button>
+            </div>
         </form>
 
     </main>
