--- a/info.html
+++ b/info.html
@@ -56,7 +56,7 @@
                         <td>35</td>
                         <td>Madrid</td>
                         <td>Edición de sonido</td>
-                        <td>abelfdezz@gmail.com</td>
+                        <td>abel@gmail.com</td>
                     </tr>
 
 
@@ -67,7 +67,7 @@
                         <td>30</td>
                         <td>Pamplona</td>
                         <td>Deporte</td>
-                        <td>adrianvid16@gmail.com</td>
+                        <td>adrian@gmail.com</td>
                     </tr>
 
                     <tr>
@@ -76,7 +76,7 @@
                         <td>38</td>
                         <td>Tenerife</td>
                         <td>Taichí</td>
-                        <td>javiercastaneda303@gmail.com</td>
+                        <td>javier@gmail.com</td>
                     </tr>
 
                     <tr>
@@ -85,7 +85,7 @@
                         <td>36</td>
                         <td>Valencia</td>
                         <td>Cómics</td>
-                        <td>miguelzapata.disten@gmail.com</td>
+                        <td>miguel@gmail.com</td>
                     </tr>
 
                     <tr>
@@ -94,7 +94,7 @@
                         <td>29</td>
                         <td>Zaragoza</td>
                         <td>CrossFit</td>
-                        <td>noeliaosta@gmail.com</td>
+                        <td>noelia@gmail.com</td>
                     </tr>
                 </tbody>
             </table>
