--- a/contacto.html
+++ b/contacto.html
@@ -29,15 +29,16 @@
 
     <main class="width_main">
         <div class="contacto">
-            <h2 class="contacto__encabezado">
-                Para cualquier duda o información sobre los cursos, <br /> contáctanos!
-            </h2>
-
-            <div>
-                <p class="contacto__tlf"><strong>Tlf: </strong>+34 931 227 721</p>
+            <div class="contacto__encabezado linea__puntos">
+                <h4>Para cualquier duda o información sobre los cursos, <br /> contáctanos!</h4>
             </div>
-            <div>
-                <p class="contacto__mail"><strong>mail: </strong>hola@letscoder.com</p>
+
+            <div class="contacto__tlf linea__puntos">
+                <p><strong>Tlf: </strong>+34 931 227 721</p>
+            </div>
+
+            <div class="contacto__tlf">
+                <p><strong>mail: </strong>hola@letscoder.com</p>
             </div>
         </div>
     </main>
