--- a/info.html
+++ b/info.html
@@ -125,13 +125,13 @@
                             <h4>Tags</h4>
                         </li>
                         <ul class="sublist">
-                            <li><span class="negrita">&ltbody&gt:</span><br/> Lo que usuario puede ver.</li>
-                            <li><span class="negrita">&lthead&gt:</span><br/> Encabezado de la página.</li>
-                            <li><span class="negrita">&ltdiv&gt:</span><br/> Una división dentro de la pagina.</li>
-                            <li><span class="negrita">&ltp&gt:</span><br/> Párrafo.</li>
-                            <li><span class="negrita">&ltimg&gt:</span><br/> Imagen.</li>
-                            <li><span class="negrita">&ltbutton&gt:</span><br/> Botón.</li>
-                            <li><span class="negrita">&ltbr/&gt:</span> Salto de linea.</li>
+                            <li><span class="negrita">&ltbody&gt</span><br/> Lo que usuario puede ver.</li>
+                            <li><span class="negrita">&lthead&gt</span><br/> Encabezado de la página.</li>
+                            <li><span class="negrita">&ltdiv&gt</span><br/> Una división dentro de la pagina.</li>
+                            <li><span class="negrita">&ltp&gt</span><br/> Párrafo.</li>
+                            <li><span class="negrita">&ltimg&gt</span><br/> Imagen.</li>
+                            <li><span class="negrita">&ltbutton&gt</span><br/> Botón.</li>
+                            <li><span class="negrita">&ltbr/&gt</span> Salto de linea.</li>
                         </ul>
                     </ul>
                 </div>
@@ -156,13 +156,13 @@
                             <h4>Selectores</h4>
                         </li>
                         <ul class="sublist">
-                            <li><span class="negrita">*:</span><br/> Selecciona los elementos de la pagina.</li>
-                            <li><span class="negrita">.clase:</span><br/> Selecciona los elementos que tengan la clase "clase".</li>
-                            <li><span class="negrita">#id:</span><br/> Selecciona el elemento con la id "id".</li>
-                            <li><span class="negrita">div .clase:</span><br/> Selecciona los elementos con la clase "clase" dentro de cualquier &ltdiv&gt.</li>
-                            <li><span class="negrita">div > p:</span><br/> Selecciona todos los elementos &ltp&gt cuyo padre sea un &ltdiv&gt </li>
-                            <li><span class="negrita">.clase1.clase2:</span><br/> Selecciona los elementos con las clases "clase1" y "clase2".</li>
-                            <li><span class="negrita">p:last-child:</span><br/> Selecciona los elementos &ltp&gt que sean el último hijo.</li>
+                            <li><span class="negrita">*</span><br/> Selecciona los elementos de la pagina.</li>
+                            <li><span class="negrita">.clase</span><br/> Selecciona los elementos que tengan la clase "clase".</li>
+                            <li><span class="negrita">#id</span><br/> Selecciona el elemento con la id "id".</li>
+                            <li><span class="negrita">div .clase</span><br/> Selecciona los elementos con la clase "clase" dentro de cualquier &ltdiv&gt.</li>
+                            <li><span class="negrita">div > p</span><br/> Selecciona todos los elementos &ltp&gt cuyo padre sea un &ltdiv&gt </li>
+                            <li><span class="negrita">.clase1.clase2</span><br/> Selecciona los elementos con las clases "clase1" y "clase2".</li>
+                            <li><span class="negrita">p:last-child</span><br/> Selecciona los elementos &ltp&gt que sean el último hijo.</li>
 
                         </ul>
                     </ul>
