--- a/contacto.html
+++ b/contacto.html
@@ -28,7 +28,7 @@
     </header>
 
     <main class="width_main">
-        <div class="contacto">
+        <div class="contacto zoom shadow">
             <div class="contacto__encabezado linea__puntos">
                 <h4>Para cualquier duda o información sobre los cursos, <br /> contáctanos!</h4>
             </div>
