--- a/info.html
+++ b/info.html
@@ -110,11 +110,9 @@
 
             <div class="list zoom shadow">
                 <div class="list__title">
-                    <ul>
-                        <li>
-                            <h3>HTML</h3>
-                        </li>
-                    </ul>
+
+                    <h3>HTML</h3>
+
                 </div>
 
                 <div class="linea__puntos"></div>
@@ -125,13 +123,13 @@
                             <h4>Tags</h4>
                         </li>
                         <ul class="sublist">
-                            <li><span class="negrita">&ltbody&gt</span><br/> Lo que usuario puede ver.</li>
-                            <li><span class="negrita">&lthead&gt</span><br/> Encabezado de la página.</li>
-                            <li><span class="negrita">&ltdiv&gt</span><br/> Una división dentro de la pagina.</li>
-                            <li><span class="negrita">&ltp&gt</span><br/> Párrafo.</li>
-                            <li><span class="negrita">&ltimg&gt</span><br/> Imagen.</li>
-                            <li><span class="negrita">&ltbutton&gt</span><br/> Botón.</li>
-                            <li><span class="negrita">&ltbr/&gt</span> Salto de linea.</li>
+                            <li><span class="negrita">&lt;body&gt;</span><br/> Lo que usuario puede ver.</li><br/>
+                            <li><span class="negrita">&lt;head&gt;</span><br/> Encabezado de la página.</li><br/>
+                            <li><span class="negrita">&lt;div&gt;</span><br/> Una división dentro de la pagina.</li><br/>
+                            <li><span class="negrita">&lt;p&gt;</span><br/> Párrafo.</li><br/>
+                            <li><span class="negrita">&lt;img&gt;</span><br/> Imagen.</li><br/>
+                            <li><span class="negrita">&lt;button&gt;</span><br/> Botón.</li><br/>
+                            <li><span class="negrita">&lt;br/&gt;</span> Salto de linea.</li>
                         </ul>
                     </ul>
                 </div>
@@ -141,11 +139,9 @@
 
             <div class="list zoom shadow">
                 <div class="list__title">
-                    <ul>
-                        <li>
-                            <h3>CSS</h3>
-                        </li>
-                    </ul>
+
+                    <h3>CSS</h3>
+
                 </div>
 
                 <div class="linea__puntos"></div>
@@ -156,12 +152,12 @@
                             <h4>Selectores</h4>
                         </li>
                         <ul class="sublist">
-                            <li><span class="negrita">*</span><br/> Selecciona los elementos de la pagina.</li>
-                            <li><span class="negrita">.clase</span><br/> Selecciona los elementos que tengan la clase "clase".</li>
-                            <li><span class="negrita">#id</span><br/> Selecciona el elemento con la id "id".</li>
-                            <li><span class="negrita">div .clase</span><br/> Selecciona los elementos con la clase "clase" dentro de cualquier &ltdiv&gt.</li>
-                            <li><span class="negrita">div > p</span><br/> Selecciona todos los elementos &ltp&gt cuyo padre sea un &ltdiv&gt </li>
-                            <li><span class="negrita">.clase1.clase2</span><br/> Selecciona los elementos con las clases "clase1" y "clase2".</li>
+                            <li><span class="negrita">*</span><br/> Selecciona los elementos de la pagina.</li><br/>
+                            <li><span class="negrita">.clase</span><br/> Selecciona los elementos que tengan la clase "clase".</li><br/>
+                            <li><span class="negrita">#id</span><br/> Selecciona el elemento con la id "id".</li><br/>
+                            <li><span class="negrita">div .clase</span><br/> Selecciona los elementos con la clase "clase" dentro de cualquier &ltdiv&gt.</li><br/>
+                            <li><span class="negrita">div > p</span><br/> Selecciona todos los elementos &ltp&gt cuyo padre sea un &ltdiv&gt </li><br/>
+                            <li><span class="negrita">.clase1.clase2</span><br/> Selecciona los elementos con las clases "clase1" y "clase2".</li><br/>
                             <li><span class="negrita">p:last-child</span><br/> Selecciona los elementos &ltp&gt que sean el último hijo.</li>
 
                         </ul>
@@ -181,17 +177,17 @@
             <div class="daily zoom shadow">
                 <dl>
                     <dt>09:00-09:20 / Daly Meeting</dt>
-                    <dd class="sublist">Ponemos en comun con el mentor lo que hicimos el día anterior y lo que queremos hacer el día de hoy.</dd>
+                    <dd class="sublist">Ponemos en comun con el mentor lo que hicimos el día anterior y lo que queremos hacer el día de hoy.</dd><br/>
                     <dt>09:20-10:00 / Timework</dt>
-                    <dd class="sublist">Trabajamos en el proyecto.</dd>
+                    <dd class="sublist">Trabajamos en el proyecto.</dd><br/>
                     <dt>10:00-11:00 / Workshop</dt>
-                    <dd class="sublist">El mentor nos da una clase teórica.</dd>
+                    <dd class="sublist">El mentor nos da una clase teórica.</dd><br/>
                     <dt>11:00-11:30 / Brake</dt>
-                    <dd class="sublist">Paramos 30m para almorzar y estirar las piernas.</dd>
+                    <dd class="sublist">Paramos 30m para almorzar y estirar las piernas.</dd><br/>
                     <dt>11:30-14:00 / Timework Again</dt>
-                    <dd class="sublist">Trabajamos de nuevo en el proyecto.</dd>
+                    <dd class="sublist">Trabajamos de nuevo en el proyecto.</dd><br/>
                     <dt>14:00-15:00 / Launch Brake</dt>
-                    <dd class="sublist">Paramos 1h para comer.</dd>
+                    <dd class="sublist">Paramos 1h para comer.</dd><br/>
                     <dt>15:00-17:30 / Timework Once Again</dt>
                     <dd class="sublist">Continuamos trabajando en el proyecto hasta la hora de irnos.</dd>
                 </dl>
